--- a/control_structures_lesson.ipynb
+++ b/control_structures_lesson.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c0631b47",
+   "id": "ca8389ab",
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5b1750c",
+   "id": "f9621885",
    "metadata": {},
    "source": [
     "# Control structures lesson\n",
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a1b3863",
+   "id": "4d6aae15",
    "metadata": {},
    "source": [
     "### If/else\n",
@@ -55,15 +55,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "34008f9b",
+   "execution_count": 7,
+   "id": "1331d2a9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hoodie weather.\n"
+     ]
+    }
+   ],
+   "source": [
+    "temp = 55\n",
+    "\n",
+    "if temp > 85:\n",
+    "    \n",
+    "    print('Boy, it\\'s hot!')\n",
+    "    \n",
+    "elif temp > 65:\n",
+    "    \n",
+    "    print('Still a bit warm.')\n",
+    "    \n",
+    "else:\n",
+    "    \n",
+    "    print('Hoodie weather.')"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "c7e093e8",
+   "id": "5a408a5e",
    "metadata": {},
    "source": [
     "### For loop\n",
@@ -73,15 +95,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8691a441",
+   "execution_count": 9,
+   "id": "b951ffbf",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 4, 9, 16, 25, 36, 49, 64, 81, 100]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_nums = list(range(1, 11))\n",
+    "sq_list = []\n",
+    "\n",
+    "for i in my_nums:\n",
+    "    sq_list.append(i**2)\n",
+    "    \n",
+    "sq_list    "
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "4b2fc0f6",
+   "id": "8e449812",
    "metadata": {},
    "source": [
     "### List comprehension\n",
@@ -91,15 +132,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b6001342",
+   "execution_count": 11,
+   "id": "1f2c32f8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 4, 9, 16, 25, 36, 49, 64, 81, 100]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "speedy_list = [i**2 for i in my_nums]\n",
+    "speedy_list"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "0e69b12f",
+   "id": "0e65f382",
    "metadata": {},
    "source": [
     "### While loop\n",
@@ -111,15 +166,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "71c7f8d2",
+   "execution_count": 16,
+   "id": "d5101aa6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "4\n",
+      "9\n",
+      "16\n",
+      "25\n",
+      "36\n",
+      "49\n",
+      "64\n",
+      "81\n",
+      "100\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "\n",
+    "while i < 11:\n",
+    "    \n",
+    "    print(i**2)\n",
+    "    \n",
+    "    i += 1"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "ebd0ed8b",
+   "id": "12ee4a95",
    "metadata": {},
    "source": [
     "### Break and continue\n",
@@ -131,15 +211,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e4515cb6",
+   "execution_count": 20,
+   "id": "73d74cb4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "\n",
+    "while i < 11:\n",
+    "    \n",
+    "    if i % 2 == 0:\n",
+    "        \n",
+    "        i += 1\n",
+    "        \n",
+    "        continue\n",
+    "        \n",
+    "    print(i)\n",
+    "    \n",
+    "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "f4fceb0b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "My dream has come true!\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "\n",
+    "while i < 11:\n",
+    "    \n",
+    "    print(i)\n",
+    "    \n",
+    "    if i == 5:\n",
+    "        \n",
+    "        print('My dream has come true!')\n",
+    "        \n",
+    "        break\n",
+    "        \n",
+    "    i += 1    "
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "72088e9c",
+   "id": "2e8630e6",
    "metadata": {},
    "source": [
     "### Prompt user for input\n",
@@ -149,8 +290,97 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "id": "22641e50",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter an integer: 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_num = input('Enter an integer: ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "eeb2a8f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(my_num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "8e3c10f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int(my_num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "42ed44dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter an integer: abc\n",
+      "Please put in an integer you dummy.\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_num = input('Enter an integer: ')\n",
+    "\n",
+    "try:\n",
+    "    \n",
+    "    int(my_num)\n",
+    "    \n",
+    "    print('This will work!')\n",
+    "    \n",
+    "except:\n",
+    "    \n",
+    "    print('Please put in an integer you dummy.')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "d07fd869",
+   "id": "79c5659b",
    "metadata": {},
    "outputs": [],
    "source": []
