add rest of exercises ... oops

--- a/function_exercises.ipynb
+++ b/function_exercises.ipynb
@@ -201,11 +201,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "6319e230",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "is_vowel('b')"
+   ]
   },
   {
    "attachments": {},
@@ -227,11 +240,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "id": "9453beb9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def is_consonant(input):\n",
+    "    if is_vowel(input):\n",
+    "        return False\n",
+    "    else:\n",
+    "        return True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "335276b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "is_consonant('e')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "a35f8fff",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "is_consonant('b')"
+   ]
   },
   {
    "attachments": {},
@@ -253,11 +314,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 32,
    "id": "fb7b2650",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def cap_first(input):\n",
+    "    count = 0\n",
+    "    new_string = ''\n",
+    "    for letter in input:\n",
+    "        #take the first letter and capitalize if consonant\n",
+    "        if count == 0 and is_consonant(letter):\n",
+    "            new_string +=letter.upper()\n",
+    "            count =+1\n",
+    "        else:\n",
+    "            new_string += letter\n",
+    "            count += 1\n",
+    "    return new_string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "3d047533",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# another wayt to do this\n",
+    "def cap_first(input):\n",
+    "    if input[0] not in ('aeiou'):\n",
+    "        return input.capitalize()\n",
+    "    else:\n",
+    "        return input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "d358ec19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#another way to do this\n",
+    "def cap_first(input):\n",
+    "    if is_consonant(input[0]): \n",
+    "        return input.capitalize()\n",
+    "    else:\n",
+    "        return input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "68e509bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'edwige'"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cap_first('edwige')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "ca24b523",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Theo'"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cap_first('theo')"
+   ]
   },
   {
    "attachments": {},
@@ -279,11 +425,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 42,
    "id": "9c06f019",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def calculate_tip(bill, percentage):\n",
+    "    return bill * percentage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "011ecb03",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10.0"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculate_tip(50, .20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "89ff451d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10.0"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculate_tip(100, .10)"
+   ]
   },
   {
    "attachments": {},
@@ -305,11 +496,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 46,
    "id": "200cf3ee",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def apply_discount(price, discount):\n",
+    "    return price - (price * discount)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "27ae8a3b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-8900"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "apply_discount(100, 90)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "b0657d4b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50.0"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "apply_discount(100, .50)"
+   ]
   },
   {
    "attachments": {},
@@ -331,11 +567,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 56,
    "id": "34f31c6f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def handle_commas(input):\n",
+    "    new_number = ''\n",
+    "    for number in input:\n",
+    "        if number != ',':\n",
+    "            new_number += number\n",
+    "    return new_number\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "13ca39ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def handle_commas(input):\n",
+    "    return int(input.replace(',',''))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "dc648d73",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5230000"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "handle_commas('5,230,000')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "d67b8d21",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "777777777777888"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "handle_commas('777,777,777,777,888')"
+   ]
   },
   {
    "attachments": {},
@@ -357,11 +653,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 65,
    "id": "ae9a1c0f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def get_letter_grade(input):\n",
+    "    if input >= 88: \n",
+    "        return 'A'    \n",
+    "    elif input >= 80:   \n",
+    "        return('B')   \n",
+    "    elif input >= 67:   \n",
+    "        return('C')  \n",
+    "    elif input >= 60: \n",
+    "        return('D') \n",
+    "    else:  \n",
+    "        return('F')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "1d6706f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'A'"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_letter_grade(90)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "1d0650bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C'"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_letter_grade(67)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "2c3b0755",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'A'"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_letter_grade(101)"
+   ]
   },
   {
    "attachments": {},
@@ -383,11 +754,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 75,
    "id": "b47f5e3d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def remove_vowels(input):\n",
+    "    new_string = ''\n",
+    "    for letter in input:\n",
+    "        if letter not in ('aeiou'):\n",
+    "            new_string += letter\n",
+    "    return new_string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "3ab1e2ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Mrcln'"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "remove_vowels('Marcelino')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "3102d519",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Thdr'"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "remove_vowels('Theodore')"
+   ]
   },
   {
    "attachments": {},
@@ -417,11 +837,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 101,
    "id": "c9437608",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def normalize_name (input):\n",
+    "    new_string = ''\n",
+    "    prev_letter = ''\n",
+    "    #remove leading and ending whitespace\n",
+    "    input.strip()\n",
+    "    for letter in input:\n",
+    "        #if letter is true for letter or number \n",
+    "        if letter.isalnum() == True:\n",
+    "            new_string += letter.lower()\n",
+    "        #checks for leading aplanumeric with a space and replace with _\n",
+    "        elif letter == ' ' and prev_letter.isalnum() == True:\n",
+    "            new_string += '_'\n",
+    "        #increment to the next letter and save it to previous lettter\n",
+    "        else:\n",
+    "            new_string += ''\n",
+    "            prev_letter = letter\n",
+    "    if new_string[len(new_string)-1] == '_':\n",
+    "        new_string = new_string[:1]\n",
+    "    return new_string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "4e392fbc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def normalize_name(input):\n",
+    "    output = ''\n",
+    "    for char in input:\n",
+    "        if char.isalnum() or char == ' ':\n",
+    "            output += char\n",
+    "    return output.strip().lower().replace(' ','_').replace('__','_')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "cecf2580",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'name'"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "normalize_name('Name')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "id": "6534018d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'first_name'"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "normalize_name('First  Name') #return 'first__name'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "id": "9f5507a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'completed'"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "normalize_name('% Completed')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "id": "032caad3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'completed'"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "normalize_name('% Completed %')"
+   ]
   },
   {
    "attachments": {},
@@ -445,11 +984,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 110,
    "id": "3e7aedbf",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def cumulative_sum(input):\n",
+    "    new_list = []\n",
+    "    count = 1\n",
+    "    for num in input: \n",
+    "        list_sum = sum(input[:count])\n",
+    "        new_list.append(list_sum)\n",
+    "        count += 1\n",
+    "    return new_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "8c9f40ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3]"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cumulative_sum([1, 1, 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "005516a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 6, 10]"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cumulative_sum([1, 2, 3, 4])"
+   ]
   }
  ],
  "metadata": {
