--- a/control_structures_exercises.ipynb
+++ b/control_structures_exercises.ipynb
@@ -8,9 +8,7 @@
    "outputs": [
     {
      "data": {
-      "application/javascript": [
-       "IPython.notebook.set_autosave_interval(0)"
-      ]
+      "application/javascript": "IPython.notebook.set_autosave_interval(0)"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -1038,7 +1036,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
